<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mp_eval</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tbishnoi@torontomu.ca">dev</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>message_filters</depend> 

  <depend>percept_interfaces</depend>
  <depend>percept</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
